Fix hard to read links in dark mode

--- a/src/style/markdown.less
+++ b/src/style/markdown.less
@@ -12,6 +12,7 @@
 	}
 
 	p > a,
+	strong > a,
 	p > em > a,
 	ul a,
 	ol a {
